Corrected aligning in css

--- a/css/main.css
+++ b/css/main.css
@@ -96,14 +96,16 @@ border-radius: 10px;
     font-size: 20px;
     font-style: normal;
     font-weight: bold;
-    line-height: normal
+    line-height: 10px;
     height: 50px;
 }
 
-.todo-table thead tr th:first-child {
-    border-radius: 10px 0px 0px 0px;
+.todo-table tbody tr td:first-child {
+    text-align: center;
+    padding: 5px;
 }
 
-.todo-table thead tr th:last-child {
-    border-radius: 0px 10px 0px 0px;
+.todo-table tbody tr td:last-child {
+    text-align: center;
+    padding: 5px;
 }
